force-app/main/default/objects/Registration_Education_Bank__c/Registration_Education_Bank__c.object-meta.xml
<CustomObject>
    <description>Use this object's records to configure which exams or courses are required for each registration industry/template.</description>
    <label>Registration Education Bank</label>
    <nameField>
        <displayFormat>RE-BANK-{0000000}</displayFormat>
        <label>Registration Education Bank Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Education Bank</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>