force-app/main/default/objects/Registration_Education_Bank__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <inlineHelpText>Enter any general instructions on what must be done by each applicant to fulfill this education requirement.</inlineHelpText>
    <label>Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>