force-app/main/default/objects/Registration_Education_Bank__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Mapped to Version__c field on Registration_Education_c object.</description>
    <label>Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>